Add server info.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -65,7 +65,7 @@
  *
  */
 
-
+@import "../assets/scss/modules/state";
 
 
 /*
@@ -73,5 +73,6 @@
  */
 
 @import "containers/intro/intro";
+@import "containers/settings/settings";
 @import "components/tile-list/tile-list";
 @import "components/tile-item/tile-item";
