--- a/src/app/containers/rule-details/rule-details.html
+++ b/src/app/containers/rule-details/rule-details.html
@@ -21,4 +21,4 @@
 -->
 
 
-<p>{{ ruleDetails.rule.name }}</p>
+<guh-action-bar back-button="true" edit-button="true" on-back="ruleDetails.back()"></guh-action-bar>
