--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -65,6 +65,7 @@
  *
  */
 
+@import "../assets/scss/modules/form";
 @import "../assets/scss/modules/state";
 
 
@@ -74,5 +75,7 @@
 
 @import "containers/intro/intro";
 @import "containers/settings/settings";
+
+@import "components/action-bar/action-bar";
 @import "components/tile-list/tile-list";
 @import "components/tile-item/tile-item";
