--- a/src/assets/scss/base/_header.scss
+++ b/src/assets/scss/base/_header.scss
@@ -88,25 +88,23 @@
 
 @include media($min-width-l) {
   .Header {
+    @include linear-gradient(to top, rgba($white, 0) 0%, rgba($white, 1) 50%, $fallback: transparent);
     bottom: auto;
-    left: 0;
-    right: auto;
-    top: 0;
-    width: 100%;
-    @include linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 1) 40%, rgba($white, 0) 100%, $fallback: transparent);
+    width: 50%;
 
     nav {
+      @include rem(padding-left, 0.5);
       @include justify-content(flex-start);
     }
 
     ul {
       li:hover::after,
       li.active::after {
-        @include rem(bottom, 2.5);
+        @include rem(bottom, 4);
       }
 
       a {
-        @include rem(padding, 3, 1.5);
+        @include rem(padding, 3, 1.5, 4.5);
       }
     }
   }
@@ -114,13 +112,8 @@
 
 @include media($min-width-xl) {
   .Header {
-    nav {
-      @include rem(padding, 0, 0.25);
-    }
-  }
-
-  .Header__wrapper {
-    margin: 0 auto;
-    width: $max-width-l;
+    left: 50%;
+    width: $max-width-l/2;
+    @include transform(translateX(-100%));
   }
 }
