Add modals component to add things and rules.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,6 +66,7 @@
  */
 
 @import "../assets/scss/modules/form";
+@import "../assets/scss/modules/list";
 @import "../assets/scss/modules/state";
 
 
@@ -77,5 +78,14 @@
 @import "containers/settings/settings";
 
 @import "components/action-bar/action-bar";
+@import "components/modal-container/modal-container";
 @import "components/tile-list/tile-list";
 @import "components/tile-item/tile-item";
+
+
+/*
+ * Shared directives
+ */
+
+@import "shared/ui/form/form";
+@import "shared/ui/wizard/wizard";
