--- a/src/app/components/devices/add/new-device-modal.html
+++ b/src/app/components/devices/add/new-device-modal.html
@@ -21,28 +21,28 @@
 -->
 
 
-<button class="close" ng-click="newDevice.modalInstance.close()">
-  <svg class="icon">
+<button class="Wizard__close" ng-click="newDevice.modalInstance.close()">
+  <svg class="Wizard__icon">
     <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
   </svg>
 </button>
 
 <div guh-wizard handle="newDevice">
   <!-- Select vendor -->
-  <div guh-wizard-step class="list" title="Select a vendor">
-    <div class="list__item list__item_isClickable" ng-repeat="vendor in newDevice.supportedVendors | orderBy: 'name' track by $index" ng-click="newDevice.selectVendor(vendor)">
+  <div guh-wizard-step class="List" title="Select a vendor">
+    <div class="List__item List__item_isClickable" ng-repeat="vendor in newDevice.supportedVendors | orderBy: 'name' track by $index" ng-click="newDevice.selectVendor(vendor)">
       {{ vendor.name }}
-      <svg class="icon">
+      <svg class="List__icon List__icon_right">
         <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
       </svg>
     </div>
   </div>
 
   <!-- Select deviceClass -->
-  <div guh-wizard-step class="list" title="Select your device">
-    <div class="list__item list__item_isClickable" ng-repeat="deviceClass in newDevice.supportedDeviceClasses | orderBy: 'name' track by $index" ng-click="newDevice.selectDeviceClass(deviceClass)">
+  <div guh-wizard-step class="List" title="Select your device">
+    <div class="List__item List__item_isClickable" ng-repeat="deviceClass in newDevice.supportedDeviceClasses | orderBy: 'name' track by $index" ng-click="newDevice.selectDeviceClass(deviceClass)">
       {{ deviceClass.name }}
-      <svg class="icon">
+      <svg class="List__icon List__icon_right">
         <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
       </svg>
     </div>
