--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -30,6 +30,11 @@
 }
 
 html,
+body {
+  min-height: 100%;
+}
+
+html,
 body,
 .main {
   height: 100%;
@@ -37,6 +42,7 @@ body,
 
 html {
   box-sizing: border-box;
+  -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
   @include rootsize();
 }
 
