Handle notification and remove ngDialog dependency.

--- a/src/app/components/modal-container/modal-container.scss
+++ b/src/app/components/modal-container/modal-container.scss
@@ -132,6 +132,16 @@ $turquoise: #57baae;
   }
 }
 
+.Modal__title {
+  @include rem(font-size, 1.2);
+  @include rem(margin, 0, 0, 1.5)
+  @include rem(padding, 1.5);
+}
+
+.Modal__content {
+  margin: 0;
+}
+
 
 /*
  * Colors & Typography
