Add new classes to device add templates.

--- a/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
+++ b/src/app/components/devices/add/pairing-templates/devices-add-create-discovery.html
@@ -33,10 +33,10 @@
 
 <!-- Discovered devices -->
 <p ng-show="newDevice.discoveredDevices.length > 0">Select your desired device/plugin.</p>
-<ul class="list" ng-show="newDevice.discoveredDevices.length > 0">
-  <li class="list__item list__item_isClickable" ng-repeat="device in newDevice.discoveredDevices | orderBy: 'name' track by $index" ng-click="newDevice.create(device)">
+<ul class="List" ng-show="newDevice.discoveredDevices.length > 0">
+  <li class="List__item List__item_isClickable" ng-repeat="device in newDevice.discoveredDevices | orderBy: 'name' track by $index" ng-click="newDevice.create(device)">
     {{ device.title }} ({{ device.description }})
-    <svg class="icon">
+    <svg class="List__icon List__icon_right">
       <use xlink:href="./assets/svg/ui/ui.symbol.svg#plus"></use>
     </svg>
   </li>
