--- a/src/app/components/devices/add/pairing-templates/devices-add-setup-enter-pin.html
+++ b/src/app/components/devices/add/pairing-templates/devices-add-setup-enter-pin.html
@@ -25,7 +25,7 @@
 
 <guh-form name="enterSecret"
           on-form-submit="newDevice.confirmPairing(params)"
-          class="list">
+          class="List">
 
   <guh-form-field label="Secret"
                   name="Secret"
